<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">公众平台助手</string>
    <string name="login_wechat">微信公众平台登录</string>
    <string name="login">登录</string>
    <string name="input_account">输入帐号</string>
    <string name="input_password">输入密码</string>
	<string name="menu_settings">Settings</string>
	<string name="profile">主页</string>
	<string name="sure">确定</string>
	<string name="cancel">取消</string>
	<string name="send">发送</string>
	<string name="message">消息</string>
    <string name="has_reply">已回复</string>
    <string name="no_message">一条消息也没有哦</string>
    <string name="message_all">全部消息</string>
    <string name="message_today">今天消息</string>
    <string name="message_yesterday">昨天消息</string>
    <string name="message_day_before">前天消息</string>
    <string name="message_older">更早消息</string>
    <string name="message_star">星标消息</string>
    <string name="new_message">条新消息</string>
    <string name="new_fans">个新用户</string>

    <string name="total_user_count">总用户数</string>
    <string name="new_people">(新增 ...)</string>

    <string name="new_message_count">新消息数</string>
    <string name="new_user_count">新增用户</string>

    <string name="remark_name">备注</string>
    <string name="area">地区</string>
    <string name="signature">签名</string>
    <string name="group">分组</string>
    <string name="send_message">发消息</string>

    <string name="detail_information">详细信息</string>

    <string name="sms_verify">短信验证</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="null_code">请输入验证码</string>
    <string name="invalide_length">请输入六位验证码</string>


    <string name="send_sms">发送验证码</string>

	<string name="mass">群   发</string>
    <string name="text">文字</string>
    <string name="img">图片</string>
    <string name="voice">语音</string>
    <string name="img_text">图文</string>
    <string name="video">视频</string>

    <string name="select_img">选择图片</string>
    <string name="select_voice">选择语音</string>
    <string name="album">相册</string>
    <string name="take_photo">拍照</string>
    <string name="record">录音</string>
    <string name="choose_from_material">从素材中选择</string>

    <string name="mass_declare">此功能处于测试阶段，\n稳定性有待测试</string>
    <string name="click_to_upload">点击上传</string>

    <string name="start_journey">开启旅程</string>
    <string name="user">用户</string>
    <string name="chat">聊天</string>
    <string name="share_to_friends">分享到朋友圈</string>
    <string name="save_me">打赏(支持比特币支付)</string>

    <string name="bit_pay">比特币钱包地址</string>
    <string name="alipay">支付宝支付地址</string>
    <string name="bit_adder">19ECUpzBQLrocUGvR44LFr87ggqyfJgswN</string>
    <string name="alipay_adder">suanmiaobaicai@foxmail.com</string>
    <string name="xiaohong_mail">hongxiao@hustunique.com</string>
    <string name="xiaoshou_mail">binfan@hustunique.com</string>
    <string name="my_mail">suanmiaobaicai@foxmail.com</string>
    <string name="mail_title">小助手用户反馈</string>
    <string name="copy_bit_addr">复制地址</string>
    <string name="has_copyed">已复制地址到剪贴板</string>
    <string name="go_to_pay">打个赏</string>
    <string name="contact_us">联系我们</string>
    <string name="i_see">看到了</string>
    <string name="send_mail">发邮件</string>
    <string name="from_account">来自帐号</string>
    <string name="setting">设置</string>
    <string name="all_user">全部用户</string>
    <string name="exit_account">退出当前账户</string>
	<string name="feedback_text">&#160;&#160;&#160;&#160;&#160;&#160;公众平台小助手是一款非官方的微信公众平台管理应用，由@华中科技大学联创团队 三名大学生完成。一直以来在手机上对微信公众平台进行管理都是一个令人困扰的问题，我们这样一个工具能够帮您解决一些苦恼。\n\n\t如有问题，请发送用户反馈，如希望得到回复，请留下电子邮箱。\n谢谢使用：)</string>
	<string name="about">关于</string>
    <string name="about_us">关于我们</string>
	<string name="about_content"><p><strong>FAQ</strong></p><p><strong>Q：公众平台助手是如何做到让用户管理微信公众平台的？</strong></p><p>A：它的原理与使用网页版直接登陆一样，只是将流程以及界面优化得更加适合手机上使用。</p><p><strong>Q：这款软件和微信公众平台是什么关系？</strong></p><p>A：公众平台助手是由华中科技大学联创团队三名大三学生制作，不属于微信官方的产品，但可以作为微信公众平台的一个补充来使用。</p><p><strong>Q：为什么需要用户输入密码？不可以像微博一样使用OAuth方式吗？</strong></p><p>A：因为微信官方并没有提供一个微信公众平台的OAuth接口，所以只能通过账号密码来访问。另外，账号信息只会在本地保留（密码使用标准的MD5方式加密），不会上传到任何的服务器。如果对安全性有极端高的要求请不要使用。<br />	PS，如果有必要，我们会在适当的时候提供一个开源的版本，让用户以及安全专家去检查确认无安全隐患后自行编译使用。</p><p><strong>Q：为什么做这样一个东西？</strong></p><p>A：出发点很简单：我们在需要一个可以让我们在手机上管理微信公众平台的东西。一开始我们觉得微信自己迟早会推出，但是没有，所以只有自己来了。做这一切的目的就是让微信公众平台更好用。往大一点说，可以认为我们试图更加完善微信的生态，也因此一些破坏微信生态的事情是我们不愿意做的。</p><p><strong>Q：你们会做微信相关的外包吗？</strong></p><p>A：还有更多有趣的事情等着我们去做：）</p><p><strong>Q：你们是谁？除了公众平台助手你们还有什么其他的产品吗？</strong></p><p>A：我们三个都是华中科技大学联创团队的成员。联创团队近期做过的东西包括Fuubo、Tuudo、华中科技大学官方微信（华小科）的技术实现 等。今年六月我们与豌豆荚合作举办了全国首届校园Hackday。PS，联创团队不是一个创业团队，是一个学生技术团队。想要查看更多关于联创的信息请登陆网站：www.hustunique.com</p><p>如果还有其他的问题，请发送用户反馈，如果需要得到回复，请在反馈内容中留下电子邮件地址噢～<br />	谢谢：）</p></string>
	<string name="about_and_feedback">关于&amp;反馈</string>
	<string name="splash_text">现在,\n\n在手机上也能管理微信公众平台了:)</string>
	<string name="feedback">反馈</string>
	<string name="feedback_hint">如果需要得到回复请留下您的邮箱</string>
	<string name="check_for_update">检查更新</string>
    <string name="push_enable">开启提醒</string>
    <string name="push_new_message_enable">新消息提醒</string>
    <string name="push_close_night_enable">23:00-7:00关闭提醒</string>
    <string name="push_new_people_enable">新用户提醒</string>
    <string name="push_disable">关闭提醒</string>

    <string name="push_frequent">消息检查频率</string>
    <string name="push_frequent_fast">快速</string>
    <string name="push_frequent_normal">正常</string>
    <string name="push_frequent_slow">较慢</string>

    <string name="hide_key_word_message">隐藏关键词消息</string>
	<string name="fans_list">用户列表</string>
    <string name="reply">回复</string>
</resources>