<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:id="@+id/dialog_view"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_border_pop_gray_title"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:text="@string/select_img"
            android:gravity="center"
            android:textColor="#333333"
            android:textSize="15dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_border_pop_gray_bottom"
        android:paddingBottom="20dip"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#4f8bb5"></LinearLayout>

        <Button
            android:id="@+id/dialog_select_img_but_album"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/select_item_bg"
            android:textColor="#000000"
            android:textSize="15dip"
            android:gravity="center"
            android:text="@string/album" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:background="#676767"
            android:layout_height="1px">


        </LinearLayout>


        <Button
            android:id="@+id/dialog_select_img_but_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/select_item_bg"
            android:textColor="#000000"
            android:textSize="15dip"
            android:gravity="center"
            android:text="@string/take_photo" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:background="#676767"
            android:layout_height="1px">

        </LinearLayout>


        <Button
            android:id="@+id/dialog_select_img_but_choose_material"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/select_item_bg"
            android:textColor="#000000"
            android:textSize="15dip"
            android:gravity="center"
            android:text="@string/choose_from_material" />

    </LinearLayout>

</LinearLayout>