<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_border_pop_gray_title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_login_text_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:textColor="#4c5373"
            android:textSize="15dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#4f8bb5"></LinearLayout>

        <RelativeLayout
            android:layout_height="50dip"
            android:background="@drawable/radius_border_login_middle"
            android:layout_width="fill_parent">

            <EditText
                android:id="@+id/dialog_login_edit_user_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="3dip"
                android:layout_alignParentBottom="true"
                android:background="#ffffff"
                android:cursorVisible="true"
                android:gravity="left"
                android:hint="@string/input_account"
                android:lines="1"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:shadowColor="#FFFFFF"
                android:textSize="13dip" />

        </RelativeLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:background="#ffffff">

            <LinearLayout
                android:layout_height="1px"
                android:layout_width="fill_parent"
                android:background="#8e8e8e"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip">

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_height="50dip"
            android:paddingBottom="20dip"
            android:background="@drawable/radius_border_login_middle"
            android:layout_width="fill_parent">

            <EditText
                android:id="@+id/dialog_login_edit_pass_word"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="3dip"
                android:layout_alignParentBottom="true"
                android:background="#ffffff"
                android:cursorVisible="true"
                android:gravity="left"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:shadowColor="#FFFFFF"
                android:textSize="13dip" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#4f8bb5"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@drawable/radius_border_pop_gray_bottom"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/dialog_login_button_sure"
                android:layout_width="80dip"
                android:layout_height="35dip"
                android:layout_centerInParent="true"
                android:background="@drawable/ensure_button_sure_bg"
                android:text="@string/sure"
                android:textColor="#ffffff"
                android:textSize="15dip" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/dialog_login_button_cancel"
                android:layout_width="80dip"
                android:layout_height="35dip"
                android:layout_centerInParent="true"
                android:background="@drawable/ensure_button_cancel_bg"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:textSize="15dip" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>